--- a/stack.yaml
+++ b/stack.yaml
@@ -42,7 +42,8 @@ packages:
 extra-deps: [
         linear-1.20.7,
         matrix-0.3.5.0,
-        random-1.1
+        random-1.1,
+        normaldistribution-1.1.0.3
     ]
 
 # Override default flag values for local packages and extra-deps
